# flight-data-ingest

./: .flake8  .gitignore  README.md  architecture.md  compose.yaml  main.py  pyproject.toml  todo.md
airflow/: Dockerfile  Dockerfile.spark  airflow-requirements.txt  alembic.ini  entrypoint.sh  spark_entrypoint.sh
airflow/dags/: airlines_refresh_dag.py  example_dynamic_dag.py  git_updater_dag.py  hello_world.py  housekeeping_dag.py  ingestion_dag.py  spark_processor_dag.py
airflow/db_migration/: env.py
airflow/db_migration/versions/: 2737e3754fdc_added_column_in_monitoring_table.py  3a9ab4385a00_initial_commit.py  43f0715b0b36_initial_commit.py  ceca22b3011f_added_monitoring_schema.py  ecfbc1fa8639_added_all_tables.py
airflow/src/airline_handler/: main.py
airflow/src/core/: flight_api.py  logger.py  s3_client.py  settings.py  utils.py
airflow/src/db/: BaseDBClient.py  config.py  flight_data_db_client.py  flight_models.py  models.py  monitoring_db_client.py  monitoring_models.py
airflow/src/db/models/: monitoring_models.py
airflow/src/housekeeper/: main.py
airflow/src/ingest/: main.py
airflow/src/processor/: Untitled-2.py  main.py  oo.py  utils.py
airflow/src/processor/jobs/: airlines_job.py  airlines_processor.py  first_job.py
airflow/src/sql/: init.sql  queries.py  staging.sql
spark/: Dockerfile  entrypoint.sh
