[project]
name = "flight-data-ingest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.40",
    "bs4>=0.0.2",
    "flightradarapi>=1.4.0",
    "free-proxy>=1.1.3",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.11.0",
    "pyspark==3.5.7",
    "python-dotenv>=1.1.1",
]
